[gd_scene load_steps=35 format=3 uid="uid://dgmrpinclpsmq"]

[ext_resource type="Script" uid="uid://bf7rlvutele5k" path="res://scripts/villian.gd" id="1_gy365"]
[ext_resource type="Texture2D" uid="uid://npffkmk5sqam" path="res://assets/sprites/Veritas of the Dark (7)/100007707_dying.png" id="2_spfs1"]
[ext_resource type="Texture2D" uid="uid://bgshelpob13eo" path="res://assets/sprites/Veritas of the Dark (7)/100007707_atk.png" id="3_j0ccg"]
[ext_resource type="Texture2D" uid="uid://l0egwflk0qkq" path="res://assets/sprites/Veritas of the Dark (7)/100007707_idle.png" id="3_spfs1"]
[ext_resource type="Texture2D" uid="uid://cvp4solrm7x0" path="res://assets/sprites/Veritas of the Dark (7)/move.png" id="4_spfs1"]
[ext_resource type="Script" uid="uid://30ke2vy75hrj" path="res://states/villain_statemachine.gd" id="6_j0ccg"]
[ext_resource type="Script" uid="uid://nd5ib7tmm2pw" path="res://states/villain_idlestate.gd" id="7_45bje"]
[ext_resource type="Script" uid="uid://bb6cwmoab2ufa" path="res://states/villain_chasestate.gd" id="8_u75s2"]
[ext_resource type="Script" uid="uid://ckf1cfm7alp64" path="res://states/villain_attackstate.gd" id="9_f6bmn"]
[ext_resource type="Script" uid="uid://c6114ktgvo68" path="res://states/villain_deadstate.gd" id="10_0rl0p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8cne3"]
atlas = ExtResource("3_j0ccg")
region = Rect2(0, 0, 277, 178)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaypa"]
atlas = ExtResource("3_j0ccg")
region = Rect2(554, 712, 277, 178)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kiw0"]
atlas = ExtResource("3_j0ccg")
region = Rect2(277, 712, 277, 178)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ve4n"]
atlas = ExtResource("3_j0ccg")
region = Rect2(0, 712, 277, 178)

[sub_resource type="AtlasTexture" id="AtlasTexture_upm6x"]
atlas = ExtResource("3_j0ccg")
region = Rect2(554, 534, 277, 178)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqff8"]
atlas = ExtResource("3_j0ccg")
region = Rect2(277, 534, 277, 178)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7yji"]
atlas = ExtResource("3_j0ccg")
region = Rect2(0, 534, 277, 178)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6wu6"]
atlas = ExtResource("3_j0ccg")
region = Rect2(554, 356, 277, 178)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n2jo"]
atlas = ExtResource("3_j0ccg")
region = Rect2(277, 356, 277, 178)

[sub_resource type="AtlasTexture" id="AtlasTexture_y84vj"]
atlas = ExtResource("3_j0ccg")
region = Rect2(0, 356, 277, 178)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5ghb"]
atlas = ExtResource("3_j0ccg")
region = Rect2(554, 178, 277, 178)

[sub_resource type="AtlasTexture" id="AtlasTexture_stw8a"]
atlas = ExtResource("3_j0ccg")
region = Rect2(277, 178, 277, 178)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcxlg"]
atlas = ExtResource("3_j0ccg")
region = Rect2(0, 178, 277, 178)

[sub_resource type="AtlasTexture" id="AtlasTexture_unjwb"]
atlas = ExtResource("3_j0ccg")
region = Rect2(554, 0, 277, 178)

[sub_resource type="AtlasTexture" id="AtlasTexture_eno5b"]
atlas = ExtResource("3_j0ccg")
region = Rect2(277, 0, 277, 178)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0kyx"]
atlas = ExtResource("2_spfs1")
region = Rect2(0, 0, 99, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0ccg"]
atlas = ExtResource("3_spfs1")
region = Rect2(0, 0, 138, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_45bje"]
atlas = ExtResource("3_spfs1")
region = Rect2(138, 0, 138, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_u75s2"]
atlas = ExtResource("3_spfs1")
region = Rect2(276, 0, 138, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6bmn"]
atlas = ExtResource("3_spfs1")
region = Rect2(0, 102, 138, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rl0p"]
atlas = ExtResource("4_spfs1")
region = Rect2(0, 0, 142, 97)

[sub_resource type="SpriteFrames" id="SpriteFrames_j0ccg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cne3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaypa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kiw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ve4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upm6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqff8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7yji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6wu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n2jo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y84vj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5ghb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stw8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcxlg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unjwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eno5b")
}],
"loop": true,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0kyx")
}],
"loop": true,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0ccg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45bje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u75s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6bmn")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rl0p")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_t1111"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gy365"]
radius = 23.3452

[node name="villian" type="CharacterBody2D" node_paths=PackedStringArray("state_machine", "sprite", "player", "detection_area")]
script = ExtResource("1_gy365")
state_machine = NodePath("StateMachine")
sprite = NodePath("AnimatedSprite2D")
player = NodePath(".")
detection_area = NodePath("Area2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_j0ccg")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_t1111")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("6_j0ccg")

[node name="villain_idlestate" type="Node" parent="StateMachine"]
script = ExtResource("7_45bje")

[node name="villain_chasestate" type="Node" parent="StateMachine"]
script = ExtResource("8_u75s2")

[node name="villain_attackstate" type="Node" parent="StateMachine"]
script = ExtResource("9_f6bmn")

[node name="villain_deadstate" type="Node" parent="StateMachine"]
script = ExtResource("10_0rl0p")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_gy365")
